--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section class="home" id="home">
       <div class="home-img">
-        <img src="img/profil.jpg" alt="Profile Image" />
+        <img src="img/Profil.jpg" alt="Profile Image" />
       </div>
       <div class="home-content">
         <h1>Hi, It's <span>Gek Mas</span></h1>
