--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <div class="about-content">
         <h2 class="heading">About <span>Me</span></h2>
-        <h3 class="role">UI/UX Designer and also a Conten Creator</h3>
+        <h3 class="role">Conten Creator and also a UI/UX Designer</h3>
         <p class="content-about">
           Hi, I'm Gek Mas, a passionate content creator and UI/UX designer . I
           specialize in creating user-centered designs that are both functional
